# bird-id-mcp

./: .gitignore  README.md  pyproject.toml
src/bird_id_mcp/: __init__.py  models.py  pipeline.py  server.py
