[project]
name = "bird-id-mcp"
version = "0.1.0"
description = "Bird species identification MCP server — YOLO detection + ConvNeXt classification, Top5 output"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hakureirm"}]
dependencies = [
    "mcp>=1.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
bird-id-mcp = "bird_id_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bird_id_mcp"]
